# eemont

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Untitled.ipynb  codecov.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml  pyproject.toml  update_ee_token.py
.ipynb_checkpoints/: CONTRIBUTING-checkpoint.rst  README-checkpoint.rst  Untitled-checkpoint.ipynb  readthedocs-checkpoint.yml  requirements-checkpoint.txt  setup-checkpoint.py  tox-checkpoint.ini
docs/: changelog.rst  conf.py  contributors.rst  docs-requirements.txt  index.rst  modules.rst  tutorials.rst  tutorials2.rst
eemont/: Sentinel2.py  __init__.py  algorithms.py  app.py  common.py  dataframe.py  dictionary.py  eeDictionary.py  eeList.py  extending.py  extra.py  feature.py  featurecollection.py  geometry.py  image.py  imagecollection.py  number.py  spectralindices.py  time.py
paper/: paper.bib  paper.md
tests/: test_common.py  test_dataframe.py  test_dictionary.py  test_eemont.py  test_feature.py  test_featurecollection.py  test_geometry.py  test_image.py  test_imagecollection.py  test_list.py  test_number.py  test_sample.py
tutorials/: 001-Clouds-and-Shadows-Masking-Sentinel-2.ipynb  002-Sentinel-2-Image-Collection-Scaling.ipynb  003-Closest-Image-to-Date-MOD16A2.ipynb  003-Closest-Image-to-Date.ipynb  004-Computing-Spectral-Indices-Landsat-8.ipynb  004-NDSI-and-Snow-Cover-Sentinel-2-MODIS.ipynb  005-EVI-with-Overloaded-Operators-Sentinel-2.ipynb  006-NDSI-and-Snow-Cover-Sentinel-2-MOD10A2.ipynb  (+21 more)
(+504 files in other folders)
